<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cd_photo_preview">Photo preview</string>
    <string name="cd_photographer_photo">Photographer photo</string>
    <string name="cd_options_button">Photo options</string>
    <string name="cd_photo">Photo</string>
    <string name="cd_favorite_button">Favorite</string>
    <string name="cd_share_button">Share</string>
    <string name="cd_download_button">Download</string>

    <string name="downloading_photo">Downloading photo…</string>
    <string name="storage_permission">Storage permission</string>
    <string name="storage_permission_description">Storage permission is required to download photos.</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="copy_link">Copy Link</string>
    <string name="photo_link">Photo link</string>
    <string name="link_copied">Link copied</string>
</resources>
