<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/photoItemFullMarginBottom"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/photoItemFullContentMarginHorizontal"
        android:layout_marginEnd="@dimen/photoItemFullContentMarginHorizontal"
        android:layout_marginBottom="@dimen/photoItemFullHeaderMarginBottom">

        <ImageView
            android:id="@+id/photographerImage"
            android:layout_width="@dimen/photoItemFullPhotographerImageSize"
            android:layout_height="@dimen/photoItemFullPhotographerImageSize"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cd_photographer_photo"
            tools:background="?colorOnSurface" />

        <LinearLayout
            android:id="@+id/photographerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/photoItemFullHeaderSpacing"
            android:layout_toStartOf="@id/optionsButton"
            android:layout_toEndOf="@id/photographerImage"
            android:orientation="vertical">

            <TextView
                android:id="@+id/photographerNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="Photographer Name" />

            <TextView
                android:id="@+id/sourceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                tools:ignore="SmallSp"
                tools:text="Source" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/optionsButton"
            style="@style/CircleImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cd_options_button"
            android:src="@drawable/ic_more_vert_24dp" />

    </RelativeLayout>

    <com.github.sikv.photos.common.ui.SquareImageView
        android:id="@+id/photoImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPlaceholder"
        android:contentDescription="@string/cd_photo"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/photoItemFullContentMarginHorizontal"
        android:layout_marginTop="@dimen/photoItemFullActionsMarginTop"
        android:layout_marginEnd="@dimen/photoItemFullContentMarginHorizontal">

        <ImageButton
            android:id="@+id/favoriteButton"
            style="@style/CircleImageButtonNoBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cd_favorite_button"
            android:src="@drawable/ic_favorite_border_24dp" />

        <ImageButton
            android:id="@+id/shareButton"
            style="@style/CircleImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/photoItemFullActionsSpacing"
            android:layout_toEndOf="@id/favoriteButton"
            android:contentDescription="@string/cd_share_button"
            android:paddingBottom="3dp"
            android:src="@drawable/ic_share_24dp" />

        <ImageButton
            android:id="@+id/downloadButton"
            style="@style/CircleImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cd_download_button"
            android:src="@drawable/ic_file_download_24dp" />

    </RelativeLayout>
</LinearLayout>
